--- a/testHTML/demo-DragScore.html
+++ b/testHTML/demo-DragScore.html
@@ -2,7 +2,7 @@
 <head>
  	<title>Drag and Create a Score</title>
     <meta charset="utf-8">
- 	<script type="module" src="./m21-dev.ts"></script>
+ 	<script src="../releases/music21.debug.js"></script>
 	<link rel="stylesheet" href="../css/m21.css">
  	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700">
 </head>
