--- a/testHTML/embedPlayer.html
+++ b/testHTML/embedPlayer.html
@@ -3,7 +3,7 @@
     <title>Embed midi player demo
     </title>
     <meta charset="utf-8">
-    <script type="module" src="./m21-dev.ts"></script>
+    <script src="../releases/music21.debug.js"></script>
     <link rel="stylesheet" href="../css/m21.css">
 </head>
 <body>
