--- a/testHTML/es6.html
+++ b/testHTML/es6.html
@@ -2,7 +2,7 @@
     <head>
         <title>Pure ES6 tests</title>
         <link rel="stylesheet" href="../css/m21.css">
-        <script type="module" src="./m21-dev.ts"></script>
+        <script src="../releases/music21.debug.js"></script>
     </head>
     <body>
         Pure ES6 test. Click the score and the note will go up one pitch.
