--- a/testHTML/jsonpickleParse.html
+++ b/testHTML/jsonpickleParse.html
@@ -2,7 +2,7 @@
     <head>
         <title>Music21 Fragment</title>
         <link rel="stylesheet" href="../css/m21.css">
-        <script type="module" src="./m21-dev.ts"></script>
+        <script src="../releases/music21.debug.js"></script>
     </head>
 <body>
 Append a new DOM from JSONPickle -- not working as of Dec 2019 (or August 2023)
