--- a/testHTML/keyboard.html
+++ b/testHTML/keyboard.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Piano Keyboard!</title>
     <link rel="stylesheet" href="../css/m21.css">
-    <script type="module" src="./m21-dev.ts"></script>
+    <script src="../releases/music21.debug.js"></script>
 </head>
 <body>
     <h1>A keyboard that can be clicked on.</h1>
