--- a/testHTML/keyboardJazz.html
+++ b/testHTML/keyboardJazz.html
@@ -3,7 +3,7 @@
         <title>Piano Keyboard!</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../css/m21.css">
-        <script type="module" src="./m21-dev.ts"></script>
+        <script src="../releases/music21.debug.js"></script>
     </head>
     <body>
     <div id="keyboardDiv"></div>
