--- a/testHTML/layout.html
+++ b/testHTML/layout.html
@@ -7,7 +7,7 @@
     <body>
         <h1>layout tests -- experimental.  The <code>ls</code> object has a LayoutScore</h1>
         <div id="scoreDiv"></div>
-        <script type="module" src="./m21-dev.ts"></script>
+        <script src="../releases/music21.debug.js"></script>
         <script>
             function main() {
                 s = new music21.stream.Score();
