--- a/testHTML/midiInKeyChords.html
+++ b/testHTML/midiInKeyChords.html
@@ -17,7 +17,7 @@
 	<div id="svgDiv">
 	</div>
 	<div id="metronomeDiv"></div>
-	<script type="module" src="./m21-dev.ts"></script>
+	<script src="../releases/music21.debug.js"></script>
 	<script>
     let s; // will become Stream object soon...
     let metro; // will become Metronome object soon...
