--- a/testHTML/midiInRequire.html
+++ b/testHTML/midiInRequire.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class='streamHolding'>
 	    </div>
-    	<script type="module" src="./m21-dev.ts"></script>
+    	<script src="../releases/music21.debug.js"></script>
 		<script>
             function main() {
                 music21.webmidi.createSelector(document.querySelector("#putMidiSelectHere"));
