--- a/testHTML/pickleM21.html
+++ b/testHTML/pickleM21.html
@@ -7,7 +7,7 @@
 <body>
 <h1>A test of pickling and unpickling with jsonpickleJS</h1>
 <div>Not currently working in 2019 December (or 2025 December)</div>
-<script type="module" src="./m21-dev.ts"></script>
+<script src="../releases/music21.debug.js"></script>
 <script>
 function main() {
     fromPython = music21.fromPython;
