--- a/testHTML/pitchEditing_long_score.html
+++ b/testHTML/pitchEditing_long_score.html
@@ -17,7 +17,7 @@
     </div>
 
 
-    <script type="module" src="./m21-dev.ts"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script>
     function main() {
         const editable = document.querySelector('#editable');
