--- a/testHTML/recordAudio.html
+++ b/testHTML/recordAudio.html
@@ -58,7 +58,7 @@
     refresh is hit.
 </div>
 
-    <script type="module" src="./m21-dev.ts"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script>
     function main() {
         audioRecorder = new music21.audioRecording.Recorder();
