--- a/testHTML/renderTinyNotationDivs.html
+++ b/testHTML/renderTinyNotationDivs.html
@@ -42,6 +42,6 @@
     <div class="music21 tinyNotation">g2 f2 partBreak C4 D8 E8 F2</div>
 </div>
 
-    <script type="module" src="./m21-dev.ts"></script>
+    <script src="../releases/music21.debug.js"></script>
 </body>
 </html>
