--- a/testHTML/roundCanon.html
+++ b/testHTML/roundCanon.html
@@ -10,7 +10,7 @@
 <div>Dec 2019 -- not working.</div>
 <div id="canonGoesHere"></div>
 
-<script type="module" src="./m21-dev.ts"></script>
+<script src="../releases/music21.debug.js"></script>
 <script>
 let m2;
 
