--- a/testHTML/showKeyboard.html
+++ b/testHTML/showKeyboard.html
@@ -3,7 +3,7 @@
         <title>music21j -- keyboard test</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../css/m21.css">
-        <script type="module" src="./m21-dev.ts"></script>
+        <script src="../releases/music21.debug.js"></script>
     </head>
     <body>
 	<div style='text-align: center; font-size: 8pt'>
