--- a/testHTML/xyLocation.html
+++ b/testHTML/xyLocation.html
@@ -18,7 +18,7 @@
         <label for="yOff">Y-top:</label><input type="text" name="yOff" id="yOff" value="0">
 
     </div>
-    <script type="module" src="./m21-dev.ts"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script>
         function main() {
             const s1 = music21.tinyNotation.TinyNotation(
