--- a/testHTML/audioSearchGame.html
+++ b/testHTML/audioSearchGame.html
@@ -1,6 +1,6 @@
 <html lang="en-us"><head>
     <title>Match pitches</title>
-    <script type="module" src="./m21-dev.ts"></script>
+    <script src="../releases/music21.debug.js"></script>
     <link rel="stylesheet" href="../css/m21.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700">
 </head>
