--- a/testHTML/chord_violin_test.html
+++ b/testHTML/chord_violin_test.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 <div>Just a single chord that plays with a violin sound when loaded and clicked.</div>
-<script type="module" src="./m21-dev.ts"></script>
+<script src="../releases/music21.debug.js"></script>
 <script>
+    const music21 = window.music21;
     function main() {
         music21.miditools.loadSoundfont('violin', vln => {
             const ch = new music21.chord.Chord(["C#", "E", "F#5"]);
