fix beams and add tests.

--- a/testHTML/xyLocation.html
+++ b/testHTML/xyLocation.html
@@ -49,6 +49,7 @@
                 console.log(n);
                 console.log(n.pitch.nameWithOctave);  // crash on rest!
             };
+            g.autoBeam = true;
             g.appendNewDOM();
 
             const offset = el => {
